# diesel-crud-example

./: .env  Cargo.toml  database.db
connection_pool/: .env  Cargo.toml  database.db
connection_pool/migrations/2026-03-08-154152-0000_create_users/: up.sql
connection_pool/src/: main.rs  model.rs
migrations/2026-02-19-165018-0000_create_users/: up.sql
src/: db.rs  main.rs  model.rs
