[package]
name = "connection_pool"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
diesel = { version = "2.3.6", features = ["sqlite", "r2d2"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
